# beyond-sekai-fw

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SKILL.md  biome.json  instruction.md  justfile
.claude/agents/: monorepo-orchestrator.md
.claude/rules/: document.md
.claude/skills/fastapi-best-practices/references/: database.md  dependencies.md  lifespan.md  pydantic.md  testing.md
.claude/skills/python-best-practices/: SKILL.md
.claude/skills/react-composition/: SKILL.md
.claude/skills/vercel-react-native-skills/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: frontend-build.yml  frontend-ci.yml  prsk-cheering.yml  prsk-dependabot.yml  prsk-labeling.yml
.kiro/settings/: mcp.json
.kiro/steering/: backend-toolchain.md  frontend-toolchain.md  japanese.md
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/items/: dependencies.py  router.py  schemas.py
backend/tests/: test_health.py
docs/plans/: 2026-03-04-vitest-setup-design.md
frontend/: .gitignore  CLAUDE.md  README.md  biome.json  get-dictionary.test.ts  get-dictionary.ts  middleware.ts  package.json  pnpm-lock.yaml  proxy.test.ts  proxy.ts  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/[lang]/: page.tsx
frontend/dictionaries/: en.json  ja.json
scripts/backend/: _serve_openapi.py  export_openapi.py  preview_openapi.sh
shared/: .gitignore
shared/api/: openapi.json  package.json  pnpm-lock.yaml
(+15 files in other folders)
